# All-Url-Uploader

./: .all-contributorsrc  .dockerignore  .env.example  .env.sample  .gitignore  .hintrc  .pylintrc  All-Url-Uploader.session  All-Url-Uploader.session-journal  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEW_README.md  Procfile  README.md  SECURITY.md  app.json  app.py  bot.py  config.py  cookies.txt  heroku.yml  log.txt  pyproject.toml  requirements.txt  sample_config.py  script.py  start  translation.py
.github/: FUNDING.yml
Uploader/: README.md  button.py  callbacks.py  commands.py  config.py  dl_button.py  echo.py  mdisk.py  script.py  split.py  thumbunali.py  utitles.py  youtube.py
asset/: README.md
binaries/: yt-dlp
core/: direct_link.py  vimeo_link.py
database/: access.py  adduser.py  database.py  footerdb.py  users_chats_db.py
docs/: README.md  app.js  index.html  next.config.js  package.json  style.css  theme.config.tsx  tsconfig.json
helper_funcs/: display_progress.py  help_Nekmo_ffmpeg.py  help_uploadbot.py
hooks/: get_link_type.py
megadl/: __init__.py  updates.txt
plugins/: admin.py  batch_downloader.py  broadcast.py  button.py  callback.py  callbacks.Txt  callbacks.py  cb_buttons.py  command.py  commands.py  custom_thumbnail.py  dl_button.py  echo.py  help_text.py  new_user.py  task_queue.py  youtube.py  youtube_dl_button.py  youtube_dl_echo.py
routers/: __init__.py  callbacks.py  commands.py  intake.py  thumbnails.py
services/: __init__.py  cooldown.py  direct_downloads.py  media.py  parsing.py  progress.py  ytdlp.py  (+3 more)
(+65 files in other folders)
